@@ -196,8 +196,25 @@ public enum CSubmenuConstructed implements ICDoc, IMenuProvider {
             }
         } // Is it even possible anymore? I think current implementation assigns decks automatically.
 
+        GameType autoGenerateVariant = null;
+        boolean isCommanderMatch = false;
+        if (!variantTypes.isEmpty()) {
+            isCommanderMatch = variantTypes.contains(GameType.Commander);
+            if (!isCommanderMatch) {
+                for (GameType variant : variantTypes) {
+                    if (variant.isAutoGenerated()) {
+                        autoGenerateVariant = variant;
+                        break;
+                    }
+                }
+            }
+        }
+
     	boolean checkLegality = FModel.getPreferences().getPrefBoolean(FPref.ENFORCE_DECK_LEGALITY);
-        if (checkLegality && !variantTypes.contains(GameType.Commander)) { //Commander deck replaces regular deck and is checked later
+
+    	//Auto-generated decks don't need to be checked here
+        //Commander deck replaces regular deck and is checked later
+        if (checkLegality && autoGenerateVariant == null && !isCommanderMatch) {
         	for (final int i : view.getParticipants()) {
         		String name = view.getPlayerName(i);
         		String errMsg = GameType.Constructed.getDeckFormat().getDeckConformanceProblem(view.getDeckChooser(i).getPlayer().getDeck());
@@ -220,9 +237,10 @@ public enum CSubmenuConstructed implements ICDoc, IMenuProvider {
             if (variantTypes.isEmpty()) {
                 rp.setTeamNumber(view.getTeam(i));
                 players.add(rp.setPlayer(lobbyPlayer));
-            } else {
+            }
+            else {
                 Deck deck = null;
-        		boolean isCommanderMatch = variantTypes.contains(GameType.Commander);
+                PaperCard vanguardAvatar = null;
         		if (isCommanderMatch) {
                     Object selected = view.getCommanderDeckLists().get(i).getSelectedValue();
                     if (selected instanceof String) {
@@ -231,7 +249,8 @@ public enum CSubmenuConstructed implements ICDoc, IMenuProvider {
                         if (sel.equals("Random") && comDecks.size() > 0) {
                         	deck = Aggregates.random(comDecks);                            
                         }
-                    } else {
+                    }
+                    else {
                     	deck = (Deck) selected;
                     }
                     if (deck == null) { //Can be null if player deselects the list selection or chose Generate
@@ -245,13 +264,19 @@ public enum CSubmenuConstructed implements ICDoc, IMenuProvider {
                         }
                     }
         		}
+                else if (autoGenerateVariant != null) {
+                    deck = autoGenerateVariant.autoGenerateDeck(rp);
+                    CardPool avatarPool = deck.get(DeckSection.Avatar);
+                    if (avatarPool != null) {
+                        vanguardAvatar = avatarPool.get(0);
+                    }
+                }
 
         		// Initialise variables for other variants
         		deck = deck == null ? rp.getDeck() : deck;
         		Iterable<PaperCard> schemes = null;
         		boolean playerIsArchenemy = view.isPlayerArchenemy(i);
         		Iterable<PaperCard> planes = null;
-        		PaperCard vanguardAvatar = null;
 
         		//Archenemy
         		if (variantTypes.contains(GameType.ArchenemyRumble)
